# embeddings

./: .gitignore  pyproject.toml
notebooks/: 01_contrastive_learning.ipynb
