[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["olaola-0 <isholamyson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
keras = "^3.4.1"
matplotlib = "^3.9.1"
jupyter = "^1.0.0"
tensorflow = "^2.16.2"
pydot = "^2.0.0"
graphviz = "^0.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
